--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@medusajs/medusa": "^1.6.0",
     "@medusajs/medusa-cli": "^1.3.3",
     "medusa-file-s3": "^1.1.11",
+    "medusa-file-spaces": "^1.3.5",
     "medusa-fulfillment-manual": "^1.1.31",
     "medusa-interfaces": "^1.3.3",
     "medusa-payment-manual": "^1.0.16",
