--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "next start -p 8000",
     "lint": "next lint",
     "cypress": "cypress open",
-    "analyze": "ANALYZE=true next build"
+    "analyze": "ANALYZE=true next build",
+    "export": "npm run build && next export -o _static"
   },
   "resolutions": {
     "webpack": "^5",
