--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "next dev -p 8000",
     "build": "next build",
     "start": "next start -H 0.0.0.0 -p ${PORT:-8080}",
+    "start-local": "next start -p 8000",
     "lint": "next lint",
     "cypress": "cypress open",
     "analyze": "ANALYZE=true next build",
@@ -40,6 +41,7 @@
     "react-hook-form": "^7.30.0",
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
+    "react-markdown": "^8.0.5",
     "sharp": "^0.30.7"
   },
   "devDependencies": {
